better structure set with transparent header.

--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
         <link rel="stylesheet" href="perfect-picture.css">
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+        <img class="title-poster" src="/images/artwork-transparent.png">
         <div class="content">
-            <img class="title-frame" src="/images/">
+            <img class="title-frame" src="/images/pp2.svg">
             <form>
                 <input type="email">
                 <button name="">Stay updated</button>
