header responsiveness setting now.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </head>
     <body>
         <img class="title-poster" src="/images/artwork-transparent.png">
+        <img class="title-poster-700" src="/images/perfect-picture-header-536.png">
         <div class="content">
             <img class="title-frame" src="/images/pp2.svg">
             <form>
