--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="perfect-picture.css">
+        <link href="https://fonts.googleapis.com/css?family=Questrial&display=swap" rel="stylesheet">
     </head>
     <body>
         <img class="title-poster" src="/images/artwork-transparent.png">
         <img class="title-poster-700" src="/images/perfect-picture-header-536.png">
         <div class="content">
             <img class="title-frame" src="/images/pp2.svg">
+            <h2>Coming this December!</h2>
             <form>
-                <input type="email">
+                <label for="email">Enter your email address to stay updated.</label>
+                <input type="email" placeholder="name@domain.com">
                 <button name="">Stay updated</button>
             </form>
         </div>
