--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
         <img class="title-poster-700" src="/images/perfect-picture-header-536.png">
         <div class="content">
             <img class="title-frame" src="/images/pp2.svg">
-            <h2>Coming this December!</h2>
-            <form>
-                <label for="email">Enter your email address to stay updated.</label>
-                <input type="email" placeholder="name@domain.com">
-                <button name="">Stay updated</button>
-            </form>
+            <div class="heading-cta">
+                <h2>Coming this December!</h2>
+                <form>
+                    <label for="email">Enter your email address to stay updated.</label>
+                    <input type="email" placeholder="name@domain.com">
+                    <button name="">Stay updated</button>
+                </form>
+            </div>
         </div>
         
         <script src="index.js" async defer></script>
