added Google Analytics code.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             </div>
         </div>
         
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-46316096-4"> </script>
         <script src="index.js" async defer></script>
     </body>
 </html>
