added form method

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <img class="title-frame" src="/images/pp2.svg">
             <div class="heading-cta">
                 <h2>Coming this December!</h2>
-                <form action="https://getform.io/f/924e15d3-34ac-4577-b4e1-6de10fd0f276">
+                <form action="https://getform.io/f/924e15d3-34ac-4577-b4e1-6de10fd0f276" method="POST">
                     <label for="email">Enter your email address to stay updated.</label>
                     <input type="email" name="email" placeholder="name@domain.com">
                     <button type="submit">Stay updated</button>
