--- a/index.html
+++ b/index.html
@@ -1,8 +1,4 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,7 +15,7 @@
             <img class="title-frame" src="/images/pp2.svg">
             <div class="heading-cta">
                 <h2>Coming this December!</h2>
-                <form action="https://getform.io/f/924e15d3-34ac-4577-b4e1-6de10fd0f276" method="POST">
+                <form action="https://submit-form.com/jay6HuL4YjXhI3yWQEqny" target="_self">
                     <label for="email">Enter your email address to stay updated.</label>
                     <input type="email" name="email" placeholder="name@domain.com">
                     <button type="submit">Stay updated</button>
