--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="perfect-picture.css">
         <link href="https://fonts.googleapis.com/css?family=Questrial&display=swap" rel="stylesheet">
-        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+        <!-- <script src="https://unpkg.com/axios/dist/axios.min.js"></script> -->
     </head>
     <body>
         <img class="title-poster" src="/images/artwork-transparent.png">
@@ -18,7 +18,7 @@
                 <h2>Coming this December!</h2>
                 <form action="https://submit-form.com/jay6HuL4YjXhI3yWQEqny" target="_self" method="POST">
                     <label for="email">Enter your email address to stay updated.</label>
-                    <input type="email" name="email" placeholder="name@domain.com">
+                    <input type="email" name="email" placeholder="name@domain.com" required>
                     <button type="submit">Stay updated</button>
                 </form>
             </div>
