added new favicon files and links.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="perfect-picture.css">
         <link href="https://fonts.googleapis.com/css?family=Questrial&display=swap" rel="stylesheet">
-        <!-- <script src="https://unpkg.com/axios/dist/axios.min.js"></script> -->
+        <link rel="shortcut icon" href="/images/perfect-picture.ico">
+        <link rel="icon" sizes="16x16 32x32 64x64" href="/images/perfect-picture.png">
+        <link rel="apple-touch-icon" sizes="57x57" href="/images/perfect-picture-60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="/images/perfect-picture-72.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="/images/perfect-picture-114.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="/images/perfect-picture-144.png">
     </head>
     <body>
         <img class="title-poster" src="/images/artwork-transparent.png">
