added meta tags from metatags.io

--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Perfect Picture: 10 Years Later</title>
-        <meta name="description" content="">
+        <title>Perfect Picture: 10 Years Later | Sparrow Pictures, 2019</title>
+        <meta name="title" content="Perfect Picture: 10 Years Later | Sparrow Pictures, 2019">
+        <meta name="description"
+            content="The girls are back! And their lives haven’t lost one spark of the drama they had eight years ago. In fact these girls are older, wiser and saddled with more issues in their not-so-fairytale relationships. It’s a rollercoaster ride of imperfect husbands, repentant ex-boyfriends, financial woes and sexual liberation with a touch of a miracle.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="perfect-picture.css">
         <link href="https://fonts.googleapis.com/css?family=Questrial&display=swap" rel="stylesheet">
@@ -13,6 +15,18 @@
         <link rel="apple-touch-icon" sizes="72x72" href="/images/perfect-picture-72.png">
         <link rel="apple-touch-icon" sizes="114x114" href="/images/perfect-picture-114.png">
         <link rel="apple-touch-icon" sizes="144x144" href="/images/perfect-picture-144.png">
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://theperfectpicturemovie.com/">
+        <meta property="og:title" content="Perfect Picture: 10 Years Later | Sparrow Pictures, 2019">
+        <meta property="og:description"
+            content="The girls are back! And their lives haven’t lost one spark of the drama they had eight years ago. In fact these girls are older, wiser and saddled with more issues in their not-so-fairytale relationships. It’s a rollercoaster ride of imperfect husbands, repentant ex-boyfriends, financial woes and sexual liberation with a touch of a miracle.">
+        <meta property="og:image" content="/images/perfect-picture-shared-image.jpg">
+        <meta property="twitter:card" content="summary_large_image">
+        <meta property="twitter:url" content="https://theperfectpicturemovie.com/">
+        <meta property="twitter:title" content="Perfect Picture: 10 Years Later | Sparrow Pictures, 2019">
+        <meta property="twitter:description"
+            content="The girls are back! And their lives haven’t lost one spark of the drama they had eight years ago. In fact these girls are older, wiser and saddled with more issues in their not-so-fairytale relationships. It’s a rollercoaster ride of imperfect husbands, repentant ex-boyfriends, financial woes and sexual liberation with a touch of a miracle.">
+        <meta property="twitter:image" content="/images/perfect-picture-shared-image.jpg">
     </head>
     <body>
         <img class="title-poster" src="/images/artwork-transparent.png">
