set meta image url to absolute

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <meta property="og:title" content="Perfect Picture: 10 Years Later | Sparrow Pictures, 2019">
         <meta property="og:description"
             content="The girls are back! And their lives haven’t lost one spark of the drama they had eight years ago. In fact these girls are older, wiser and saddled with more issues in their not-so-fairytale relationships. It’s a rollercoaster ride of imperfect husbands, repentant ex-boyfriends, financial woes and sexual liberation with a touch of a miracle.">
-        <meta property="og:image" content="/images/perfect-picture-shared-image.jpg">
+        <meta property="og:image" content="https://theperfectpicturemovie.com/images/perfect-picture-shared-image.jpg">
         <meta property="twitter:card" content="summary_large_image">
         <meta property="twitter:url" content="https://theperfectpicturemovie.com/">
         <meta property="twitter:title" content="Perfect Picture: 10 Years Later | Sparrow Pictures, 2019">
@@ -30,7 +30,7 @@
     </head>
     <body>
         <img class="title-poster" src="/images/artwork-transparent.png">
-        <img class="title-poster-700" src="/images/perfect-picture-header-536.png">
+        <img class="title-poster-700" src="https://theperfectpicturemovie.com/images/perfect-picture-header-536.png">
         <div class="content">
             <img class="title-frame" src="/images/pp2.svg">
             <div class="heading-cta">
