--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <meta property="twitter:image" content="/images/perfect-picture-shared-image.jpg">
     </head>
     <body>
-        <img class="title-poster" src="/images/artwork-transparent.png">
+        <img class="title-poster" src="/images/pp-poster.jpg">
         <img class="title-poster-700" src="https://theperfectpicturemovie.com/images/perfect-picture-header-536.png">
         <div class="content">
             <img class="title-frame" src="/images/pp2.svg">
