created the navbar, added links with empty hrefs

--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
         <meta property="twitter:image" content="/images/perfect-picture-shared-image.jpg">
     </head>
     <body>
+        <nav>
+            <ul class="nav-list">
+                <li class="nav-item"><a href="#">Synopsis</a></li>
+                <li class="nav-item"><a href="#">Trailer</a></li>
+                <li class="nav-item"><a href="#">Showtimes</a></li>
+            </ul>
+        </nav>
         <img class="title-poster" src="/images/pp-poster.jpg">
         <img class="title-poster-700" src="https://theperfectpicturemovie.com/images/perfect-picture-header-536.png">
         <div class="content">
