--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 <li class="nav-item"><a href="#">Showtimes</a></li>
             </ul>
         </nav>
-        <img class="title-poster" src="/images/pp-poster.jpg">
-        <img class="title-poster-700" src="https://theperfectpicturemovie.com/images/perfect-picture-header-536.png">
+        <img class="title-poster" src="/images/pp-banner-with-dates.jpg">
+        <!-- <img class="title-poster-700" src="https://theperfectpicturemovie.com/images/perfect-picture-header-536.png"> -->
         <div class="content">
             <img class="title-frame" src="/images/pp2.svg">
             <div class="heading-cta">
