on master, the same image(the poster) loads on all devices.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </head>
     <body>
         <img class="title-poster" src="/images/pp-poster.jpg">
-        <img class="title-poster-700" src="https://theperfectpicturemovie.com/images/perfect-picture-header-536.png">
+        <img class="title-poster-700" src="/images/pp-poster.jpg">
         <div class="content">
             <img class="title-frame" src="/images/pp2.svg">
             <div class="heading-cta">
