on dev, the same image(poster with dates) now loads on all devices.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </ul>
         </nav>
         <img class="title-poster" src="/images/pp-banner-with-dates.jpg">
-        <!-- <img class="title-poster-700" src="https://theperfectpicturemovie.com/images/perfect-picture-header-536.png"> -->
+        <img class="title-poster-700" src="/images/pp-banner-with-dates.jpg">
         <div class="content">
             <img class="title-frame" src="/images/pp2.svg">
             <div class="heading-cta">
