added the sections and tested the scroll behavior option, but it failed.

--- a/index.html
+++ b/index.html
@@ -31,13 +31,22 @@
     <body>
         <nav>
             <ul class="nav-list">
-                <li class="nav-item"><a href="#">Synopsis</a></li>
-                <li class="nav-item"><a href="#">Trailer</a></li>
-                <li class="nav-item"><a href="#">Showtimes</a></li>
+                <li class="nav-item"><a href="#synopsis">Synopsis</a></li>
+                <li class="nav-item"><a href="#trailer">Trailer</a></li>
+                <li class="nav-item"><a href="#showtimes">Showtimes</a></li>
             </ul>
         </nav>
         <img class="title-poster" src="/images/pp-banner-with-dates.jpg">
         <img class="title-poster-700" src="/images/pp-banner-with-dates.jpg">
+        <section>
+            <h2 id="synopsis">Synopsis</h2>
+        </section>
+        <section>
+            <h2 id="trailer">Trailer</h2>
+        </section>
+        <section>
+            <h2 id="showtimes">Showtimes</h2>
+        </section>
         <div class="content">
             <img class="title-frame" src="/images/pp2.svg">
             <div class="heading-cta">
