added new sections for trailer, synopsis, with content too.

--- a/index.html
+++ b/index.html
@@ -39,13 +39,26 @@
         <img class="title-poster" src="/images/pp-banner-with-dates.jpg">
         <img class="title-poster-700" src="/images/pp-banner-with-dates.jpg">
         <section>
-            <h2 id="synopsis">Synopsis</h2>
+            <div class="container">
+                <h2 id="synopsis" class="section-header">Synopsis</h2>
+                <p>The girls are back! And their lives haven’t lost one spark of the drama they had 10 years ago. In fact, these girls are
+                saddled with more issues in their not-so-fairy-tale relationships. It’s a rollercoaster ride of imperfect husbands,
+                repentant ex-boyfriends, and daring romantic exploits.</p>
+                <p>A movie about growing up and everything in between.</p>
+            </div>
         </section>
         <section>
-            <h2 id="trailer">Trailer</h2>
+            <div class="container">
+                <h2 id="trailer" class="section-header">Trailer</h2>
+                <div class='embed-container'>
+                    <iframe src='https://player.vimeo.com/video/344774174' frameborder='0'
+                        webkitAllowFullScreen mozallowfullscreen allowFullScreen>
+                    </iframe>
+                </div>
+            </div>
         </section>
         <section>
-            <h2 id="showtimes">Showtimes</h2>
+            <h2 id="showtimes" class="section-header">Showtimes</h2>
         </section>
         <div class="content">
             <img class="title-frame" src="/images/pp2.svg">
