add the backgrounds for the various sections

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </nav>
         <img class="title-poster" src="/images/pp-banner-with-dates.jpg">
         <img class="title-poster-700" src="/images/pp-banner-with-dates.jpg">
-        <section>
+        <section class="s-synopsis">
             <div class="container">
                 <h2 id="synopsis" class="section-header">Synopsis</h2>
                 <p>The girls are back! And their lives haven’t lost one spark of the drama they had 10 years ago. In fact, these girls are
@@ -47,7 +47,7 @@
                 <p>A movie about growing up and everything in between.</p>
             </div>
         </section>
-        <section>
+        <section class="s-trailer">
             <div class="container">
                 <h2 id="trailer" class="section-header">Trailer</h2>
                 <div class='embed-container'>
@@ -57,7 +57,7 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section class="s-showtimes">
             <h2 id="showtimes" class="section-header">Showtimes</h2>
         </section>
         <div class="content">
