--- a/index.html
+++ b/index.html
@@ -51,9 +51,8 @@
             <div class="container">
                 <h2 id="trailer" class="section-header">Trailer</h2>
                 <div class='embed-container'>
-                    <iframe src='https://player.vimeo.com/video/344774174' frameborder='0'
-                        webkitAllowFullScreen mozallowfullscreen allowFullScreen>
-                    </iframe>
+                    <iframe src='https://www.youtube.com/embed/QILiHiTD3uc' frameborder='0'
+                        allowfullscreen></iframe>
                 </div>
             </div>
         </section>
