showtimes content container size now same as video width

--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
         </section>
         <section class="s-showtimes">
             <h2 id="showtimes" class="section-header">Showtimes</h2>
+            <div class="container showtimes-container">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto ab dolorum voluptatem explicabo ducimus eius, porro sapiente, rerum quod ut obcaecati? Animi, in earum repellendus labore quasi suscipit et. Iusto!</p>
+            </div>
         </section>
         
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-46316096-4"> </script>
