--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
         </section>
         <section class="s-showtimes">
             <h2 id="showtimes" class="section-header">Showtimes</h2>
-            <div class="container showtimes-container">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto ab dolorum voluptatem explicabo ducimus eius, porro sapiente, rerum quod ut obcaecati? Animi, in earum repellendus labore quasi suscipit et. Iusto!</p>
+            <div class="showtimes-container">
+                <p>Accra</p>
+                <p>Lagos</p>
             </div>
         </section>
         
