fixed white line under image on large screens

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 <li class="nav-item"><a href="#showtimes">Showtimes</a></li>
             </ul>
         </nav>
-        <img class="title-poster" src="/images/pp-banner-with-dates.jpg">
-        <img class="title-poster-700" src="/images/pp-banner-with-dates.jpg">
+        <img class="title-poster" src="/images/pp-banner-with-dates.jpg" />
+        <img class="title-poster-700" src="/images/pp-banner-with-dates.jpg" />
         <section class="s-synopsis">
             <div class="container">
                 <h2 id="synopsis" class="section-header">Synopsis</h2>
