replaced trailer with test images for video

--- a/index.html
+++ b/index.html
@@ -7,20 +7,24 @@
         <meta name="description"
             content="The girls are back! And their lives haven’t lost one spark of the drama they had eight years ago. In fact these girls are older, wiser and saddled with more issues in their not-so-fairytale relationships. It’s a rollercoaster ride of imperfect husbands, repentant ex-boyfriends, financial woes and sexual liberation with a touch of a miracle.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+
         <link rel="stylesheet" href="perfect-picture.css">
         <link href="https://fonts.googleapis.com/css?family=Questrial&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">
         <link rel="shortcut icon" href="/images/perfect-picture.ico">
         <link rel="icon" sizes="16x16 32x32 64x64" href="/images/perfect-picture.png">
         <link rel="apple-touch-icon" sizes="57x57" href="/images/perfect-picture-60.png">
         <link rel="apple-touch-icon" sizes="72x72" href="/images/perfect-picture-72.png">
         <link rel="apple-touch-icon" sizes="114x114" href="/images/perfect-picture-114.png">
         <link rel="apple-touch-icon" sizes="144x144" href="/images/perfect-picture-144.png">
+
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://theperfectpicturemovie.com/">
         <meta property="og:title" content="Perfect Picture: 10 Years Later | Sparrow Pictures, 2019">
         <meta property="og:description"
             content="The girls are back! And their lives haven’t lost one spark of the drama they had eight years ago. In fact these girls are older, wiser and saddled with more issues in their not-so-fairytale relationships. It’s a rollercoaster ride of imperfect husbands, repentant ex-boyfriends, financial woes and sexual liberation with a touch of a miracle.">
         <meta property="og:image" content="https://ppdev.netlify.com/images/pp-poster.jpg">
+
         <meta property="twitter:card" content="summary_large_image">
         <meta property="twitter:url" content="https://theperfectpicturemovie.com/">
         <meta property="twitter:title" content="Perfect Picture: 10 Years Later | Sparrow Pictures, 2019">
@@ -50,10 +54,7 @@
         <section class="s-trailer">
             <div class="container">
                 <h2 id="trailer" class="section-header">Trailer</h2>
-                <div class='embed-container'>
-                    <iframe src='https://www.youtube.com/embed/PuuGRfXOjxo' frameborder='0'
-                        allowfullscreen></iframe>
-                </div>
+                <img src="images/adjetey.jpg" id="pp-trailer" alt="" width="100%">
             </div>
         </section>
         <section class="s-showtimes">
@@ -65,6 +66,9 @@
         </section>
         
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-46316096-4"> </script>
-        <script src="index.js" async defer></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+        <script src="popup.js"></script>
     </body>
 </html>
