Added style for promo section, and re-introduced form

--- a/index.html
+++ b/index.html
@@ -64,6 +64,19 @@
                 <p>Lagos</p>
             </div>
         </section>
+        <section class="s-promo">
+            <h2 id="promo" class="section-header">Promo</h2>
+            <div class="promo-container">
+                <h1>Perfect Picture 1</h1>
+                <h3>Watch Perfect Picture 1 for free on sparrowstation.com</h3>
+                <form action="https://submit-form.com/jay6HuL4YjXhI3yWQEqny" target="_self" method="POST">
+                    <label>Enter your email address to receive a promo code to watch Perfect Picture for free</label>
+                    <input type="email" name="email" placeholder="name@domain.com" required>
+                    <button type="submit">Receive code</button>
+                </form>
+                <small>This promo ends on 13th December 2019</small>
+            </div>
+        </section>
         
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-46316096-4"> </script>
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"
