styled showing section.

--- a/index.html
+++ b/index.html
@@ -60,8 +60,26 @@
         <section class="s-showtimes">
             <h2 id="showtimes" class="section-header">Showtimes</h2>
             <div class="showtimes-container">
-                <p>Accra</p>
-                <p>Lagos</p>
+                <span class="showing">
+                    <p style="color:#663399">ACCRA. GHANA</p>
+                    <h4>World Exclusive Premiere. Accra. Ghana</h4>
+                    <p>Sun 1st December 2019</p>
+                    <p>Labadi Beach Hotel</p>
+                    <p>Starts at 4pm</p>
+                </span>
+            
+                <span class="showing">
+                    <h4>Cinema Opening. Accra. Ghana</h4>
+                    <p>From Sat 14th December 2019</p>
+                    <p>Silverbird Cinemas</p>
+                </span>
+                
+                <span class="showing">
+                    <h4>Regional Screenings. Kumasi. Ghana</h4>
+                    <p>Sat, 21st December, 2019</p>
+                    <p>Miklin Hotel</p>
+                </span>
+
             </div>
         </section>
         <section class="s-promo">
@@ -70,7 +88,7 @@
                 <h1>Perfect Picture 1</h1>
                 <h3>Watch Perfect Picture 1 for free on sparrowstation.com</h3>
                 <form action="https://submit-form.com/jay6HuL4YjXhI3yWQEqny" target="_self" method="POST">
-                    <label>Enter your email address to receive a promo code to watch Perfect Picture for free</label>
+                    <label>Enter your email address to receive a promo code to watch Perfect Picture 1 for free!</label>
                     <input type="email" name="email" placeholder="name@domain.com" required>
                     <button type="submit">Receive code</button>
                 </form>
