made nav fixed, fixing in-page links

--- a/index.html
+++ b/index.html
@@ -42,23 +42,23 @@
         </nav>
         <img class="title-poster" src="/images/pp-banner-with-dates.jpg" />
         <img class="title-poster-700" src="/images/perfect-picture-header-mobile.jpg" />
-        <section class="s-synopsis">
+        <section class="s-synopsis" id="synopsis">
             <div class="container">
-                <h2 id="synopsis" class="section-header">Synopsis</h2>
+                <h2 class="section-header">Synopsis</h2>
                 <p>The girls are back! And their lives haven’t lost one spark of the drama they had 10 years ago. In fact, these girls are
                 saddled with more issues in their not-so-fairy-tale relationships. It’s a rollercoaster ride of imperfect husbands,
                 repentant ex-boyfriends, and daring romantic exploits.</p>
                 <p>A movie about growing up and everything in between.</p>
             </div>
         </section>
-        <section class="s-trailer">
+        <section class="s-trailer" id="trailer">
             <div class="container">
-                <h2 id="trailer" class="section-header">Trailer</h2>
+                <h2 class="section-header">Trailer</h2>
                 <img src="images/adjetey.jpg" id="pp-trailer" alt="" width="100%">
             </div>
         </section>
-        <section class="s-showtimes">
-            <h2 id="showtimes" class="section-header">Showtimes</h2>
+        <section class="s-showtimes" id="showtimes">
+            <h2 class="section-header">Showtimes</h2>
             <div class="showtimes-container">
                 <span class="showing">
                     <p style="color:#663399">ACCRA. GHANA</p>
