quickly tested blend mode.

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         <section class="s-trailer" id="trailer">
             <div class="container">
                 <h2 class="section-header">Trailer</h2>
+                <!-- <div class="blend"></div> -->
                 <img src="images/adjetey.jpg" id="pp-trailer" alt="" width="100%">
             </div>
         </section>
