nav edits for fixed view

--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
                 <li class="nav-item"><a href="#showtimes">Showtimes</a></li>
             </ul>
         </nav>
-        <img class="title-poster" src="/images/pp-banner-with-dates.jpg" />
-        <img class="title-poster-700" src="/images/perfect-picture-header-mobile.jpg" />
+        <section class="poster">
+            <img class="title-poster" src="/images/pp-banner-with-dates.jpg" />
+            <img class="title-poster-700" src="/images/perfect-picture-header-mobile.jpg" />
+        </section>
         <section class="s-synopsis" id="synopsis">
             <div class="container">
                 <h2 class="section-header">Synopsis</h2>
