styled location, changed image for video thumnbnail

--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
             <div class="container">
                 <h2 class="section-header">Trailer</h2>
                 <!-- <div class="blend"></div> -->
-                <img src="images/adjetey.jpg" id="pp-trailer" alt="" width="100%">
+                <img src="images/video-thumbnail.jpg" id="pp-trailer" alt="" width="100%">
             </div>
         </section>
         <section class="s-showtimes" id="showtimes">
             <h2 class="section-header">Showtimes</h2>
             <div class="showtimes-container">
                 <span class="showing">
-                    <p style="color:#663399">ACCRA. GHANA</p>
+                    <p class="location">ACCRA. GHANA</p>
                     <h4>World Exclusive Premiere. Accra. Ghana</h4>
                     <p>Sun 1st December 2019</p>
                     <p>Labadi Beach Hotel</p>
