final image with video watch icon.

--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
         <section class="s-trailer" id="trailer">
             <div class="container">
                 <h2 class="section-header">Trailer</h2>
-                <!-- <div class="blend"></div> -->
-                <img src="images/video-thumbnail.jpg" id="pp-trailer" alt="" width="100%">
+                <img src="images/perfect-picture-video-thumbnail.jpg" id="pp-trailer" alt="" width="100%">
             </div>
         </section>
         <section class="s-showtimes" id="showtimes">
