showtimes-container no longer relevant

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
             </div>
         </section>
         <section class="s-showtimes" id="showtimes">
-            <h2 class="section-header">Showtimes</h2>
-            <div class="showtimes-container">
+            <div class="container">
+                <h2 class="section-header">Showtimes</h2>
                 <span class="showing">
                     <p class="location">ACCRA. GHANA</p>
                     <h4>World Exclusive Premiere. Accra. Ghana</h4>
