--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
                 <span class="showing">
                     <p class="location">ACCRA. GHANA</p>
                     <h4>World Exclusive Premiere. Accra. Ghana</h4>
-                    <p>Sun 1st December 2019</p>
+                    <p>Sun, 1st December, 2019</p>
                     <p>Labadi Beach Hotel</p>
                     <p>Starts at 4pm</p>
                 </span>
             
                 <span class="showing">
                     <h4>Cinema Opening. Accra. Ghana</h4>
-                    <p>From Sat 14th December 2019</p>
+                    <p>From Sat, 14th December, 2019</p>
                     <p>Silverbird Cinemas</p>
                 </span>
                 
