promo added to navbar

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <li class="nav-item"><a href="#synopsis">Synopsis</a></li>
                 <li class="nav-item"><a href="#trailer">Trailer</a></li>
                 <li class="nav-item"><a href="#showtimes">Showtimes</a></li>
+                <li class="nav-item"><a href="#promo">Promo</a></li>
             </ul>
         </nav>
         <section class="poster">
@@ -64,28 +65,28 @@
                 <h2 class="section-header">Showtimes</h2>
                 <span class="showing">
                     <p class="location">ACCRA. GHANA</p>
-                    <h4>World Exclusive Premiere. Accra. Ghana</h4>
+                    <h4>World Exclusive Premiere.<br>Accra. Ghana</h4>
                     <p>Sun, 1st December, 2019</p>
                     <p>Labadi Beach Hotel</p>
                     <p>Starts at 4pm</p>
                 </span>
             
                 <span class="showing">
-                    <h4>Cinema Opening. Accra. Ghana</h4>
+                    <h4>Cinema Opening.<br>Accra. Ghana</h4>
                     <p>From Sat, 14th December, 2019</p>
                     <p>Silverbird Cinemas</p>
                 </span>
                 
                 <span class="showing">
-                    <h4>Regional Screenings. Kumasi. Ghana</h4>
+                    <h4>Regional Screenings.<br>Kumasi. Ghana</h4>
                     <p>Sat, 21st December, 2019</p>
                     <p>Miklin Hotel</p>
                 </span>
 
             </div>
         </section>
-        <section class="s-promo">
-            <h2 id="promo" class="section-header">Promo</h2>
+        <section class="s-promo" id="promo">
+            <h2 class="section-header">Promo</h2>
             <div class="promo-container">
                 <h1>Perfect Picture 1</h1>
                 <h3>Watch Perfect Picture 1 for free on sparrowstation.com</h3>
