--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
         </section>
         
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-46316096-4"> </script>
+        <script src="index.js"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"
             integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
